# idea-box-mcp

./: Dockerfile  LICENSE  README.ar.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.md  README.zh.md  pyproject.toml
src/idea_box_mcp/: __init__.py  __main__.py  server.py
